$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.18-3 (opened March 8, 2010)

	* new version opened with the release of vegan 1.17-2 (March 8,
	2010). 

	* DESCRIPTION: Corrected the name of Bob O'Hara (also in release
	1.17-2). 
	
Version 1.18-2 (closed March 8, 2010)

	* ordistep: documented the 'anova' component added to the result
	object. 

	* densityplot.oecosimu: gives no warning if there is only one
	statistic and hence only one panel.

	* nesteddisc: failed if highest species frequencies were tied. The
	error message was "Error: dims [prodcut 15] do not match the
	length of object [0]". Found by Eric Fuchs in the help forum of
	vegan.r-forge.r-project.org. The function does not try as hard to
	optimize the index, and hence it is much faster (but slacker).

	* screeplot: New argument 'legend' for all methods (except
	'decorana') to draw a legend if the observed and broken stick
	distribution are both plotted. Now also respects 'pch' for the
	broken stick line.

	* permutest.betadisper: print method got ordering of permutation
	p-values wrong in displaying the matrix of pairwise tests. The
	computed values were correct. The formatting for printing contained
	the bug. Reported by Dan O'Shea.

Version 1.18-1 (closed February 18, 2010)

	* closed with the release of vegan 1.17-1. The release contains
	bug fixes and multipart of 1.18-1, but excludes MOStest and 1.18-1
	upgrades to ordistep.

	* ordistep: saves model changes in the 'anova' item similarly as
	standard step(). Experimental feature: not yet documented.

	* envfit: did not pass weights to factorfit or to vectorfit when
	the environmental variable was a single vector. Reported for
	vectors by Richard Telford. Broken in rev1004 (Sep 12, 2009).

	* CCorA: Fixed bug in presentation of variables in plots. Adds new
	biplot types. General improvement in checking exceptional cases
	improve stability.

	* predict.cca, predict.rda: match 'newdata' by row names or column